welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:30: error: ')' expected but 'if' found.
  if (estSurBiscuit()){
  ^